--- a/index.html
+++ b/index.html
@@ -6,6 +6,37 @@
     <title>Sign Up</title>
 </head>
 <body>
-    
+    <div class="main">
+        <h1>Sign Up</h1>
+        <section>
+            <label for="name">Name</label>
+            <input type="text" id="name">
+
+            <label for="Email">Email</label>
+            <input type="email" id="Email">
+
+            <label for="phone">Phone number</label>
+            <input type="tel" id="phone">
+
+            <label for="password">Password</label> 
+            <input type="password" id="password">
+
+            <label for="confirmPassword">Confirm Password</label>
+            <input type="password" id="confirmPassword">
+
+            <button type="submit">Sign Up</button>
+
+            <p>Already have an account? <a href="login.php">Login</a></p>
+
+            <h2>Or</h2>
+
+            <div class="accs">
+                <a href="https://www.facebook.com/"><img src="images/facebook.png" alt="facebook"></a>
+                <a href="https://www.google.com/"><img src="images/google.png" alt="google"></a>
+                <a href="https://www.linkedin.com/"><img src="images/linkedin.png" alt="linkedin"></a>
+            </div>
+
+        </section>
+    </div>
 </body>
 </html>
