Update logo link and shadow to main

--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="img/libro.png">
     <title>Sign Up</title>
     <link rel="stylesheet" href="style.css">
     <script src="index.js"></script>
 </head>
 <body>
     <div class="main">
-        <div class="logo">
-            <img src="img/libro.png" alt="logo">
-            <h1>EcoNotes</h1>
-        </div>
+        <a href="/">
+            <div class="logo">
+                <img src="img/libro.png" alt="logo">
+                <h1>EcoNotes</h1>
+            </div>
+        </a>
         <section>
             <h2>Sign Up</h2>
             <form action="#"> 
